--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #1a1a2e;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+h1 {
+  Font-Family: 'Bree Serif', Serif;
+  Font-Size: 43px;
+  color: #e94560;
+  margin-top: 0;
+}
+
+p {
+  font-family: 'Alegreya', sans-serif;
+  Font-Size: 17px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+svg {
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.code {
+  padding: 15px;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 5%;
+  font-weight: lighter;
+  font-family: 'Anonymous Pro', monospace;
+}
+
+.gradient {
+  /* Fallback: Set a background color. */
+  background-color: red;
+
+  /* Create the gradient. */
+  background-image: linear-gradient(180deg, #0f3460, #e94560);
+
+  /* Set the background size and repeat properties. */
+  background-size: 100%;
+  background-repeat: repeat;
+
+  /* Use the text as a mask for the background. */
+  /* This will show the gradient as a text color rather than element bg. */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+
+.title{
+  font-size: 17rem;
+  line-height: 0.75;
+  letter-spacing:5px;
+  padding: 100px 0px 50px 100px;
+  margin: 0;
+  text-align: left;
+}
+
+.landing-text{
+  text-align: left;
+  padding-left: 100px;
+  font-size: 2rem;
+}
+
+.technologies-container{
+  margin: 0;
+  background-color: #16213e;
+  padding: 0 100px 50px 100px;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .container{
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .title{
+    padding: 0;
+    font-size: 5rem;
+    text-align: center;
+    margin: 100px 0 100px 0;
+  }
+
+  .landing-text, .code {
+    text-align: left;
+    padding: 10px;
+    font-size: 20px;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+
+  p {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  h1{
+    text-align: center;
   }
 }
